- Change some images to be retrieved from host - Make few layout changes

--- a/index.html
+++ b/index.html
@@ -42,15 +42,17 @@
         </div>
         <div class="col-md-6 col-sm-12 col-xs-12 text-center">
           <h2>
-            <i class="fa fa-terminal"></i>
+            <i class="fa fa-code"></i>
           </h2>
-          <h2>
-            Web Developer
+          <h2 id="profile-header">
+            Full Stack Developer
           </h2>
           <h3>
-            Full stack engineer
+            Computer Engineer
           </h3>
           <hr>
+          <img id="rby-logo" src="https://i.imgsafe.org/01270c129c.png" class="img-responsive center-block" alt="Ruby Certified Programmer">
+          <br>
           <p>I am a full stack engineer, with practical experience on developing Web applications with Ruby on Rails and JavaScript; passionate about solutions architechture and data visualization.</p>
         </div>
       </div>
@@ -60,12 +62,6 @@
           <h1 id="portfolio-title" class="section-title text-primary text-center">
           Portfolio
           </h1>
-        </div>
-        <div class="separator col-md-12 col-sm-12 col-xs-12">
-          </br>
-        </div>
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <img id="rby-logo" src="logo_silver_v21.png" class="img-responsive center-block" alt="Ruby Certified Programmer">
         </div>
         <div class="separator col-md-12 col-sm-12 col-xs-12">
           </br>
