--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           <div class="collapse navbar-collapse" id="main-navbar-colapse">
             <ul class="nav navbar-nav navbar-right">
               <li><a id="about-link" href="#">About</a></li>
-              <li><a id="port-link" href="#">Portfolio</a></li>
               <li><a id="contact-link" href="#">Contact</a></li>
+              <li><a id="port-link" href="#">Portfolio</a></li>
             </ul>
           </div>
         </div>
@@ -55,6 +55,46 @@
           <img id="rby-logo" src="https://i.imgsafe.org/01270c129c.png" class="img-responsive center-block" alt="Ruby Certified Programmer">
           <br>
           <p>I am a full stack engineer, with practical experience on developing Web applications with Ruby on Rails and JavaScript; passionate about solutions architechture and data visualization.</p>
+        </div>
+      </div>
+      <hr id="hr-contact">
+      <div id="contact" class="row">
+        <div class="col-md-12">
+          <h1 id="contact-title" class="section-title text-primary text-center">
+          Contact
+          </h1>
+          <h2 class="text-center">
+            Email me
+            <span>
+              <a class="contact-icon" href="mailto:viaguz@gmail.com">
+                <i class="fa fa-envelope-o"></i>
+              </a>
+            </span>
+            or contact me through these networks:
+          </h2>
+        </div>
+        <div class="separator col-md-12 col-sm-12 col-xs-12">
+          </br>
+        </div>
+        <div class="col-md-12 text-center">
+          <a class="contact-icon" href="https://cr.linkedin.com/in/vguzmanc" target="_blank">
+            <i class="fa fa-linkedin-square"></i>
+          </a>
+          <a class="contact-icon" href="https://github.com/VictorGuzman" target="_blank">
+            <i class="fa fa-github"></i>
+          </a>
+          <a class="contact-icon" href="https://twitter.com/vicguzmn" target="_blank">
+            <i class="fa fa-twitter"></i>
+          </a>
+          <a class="contact-icon" href="https://www.facebook.com/victor.guzmanchinchilla" target="_blank">
+            <i class="fa fa-facebook-official"></i>
+          </a>
+          <a class="contact-icon" href="http://codepen.io/vguzman/" target="_blank">
+            <i class="fa fa-codepen"></i>
+          </a>
+          <a class="contact-icon" href="https://medium.com/@viaguz" target="_blank">
+            <i class="fa fa-medium"></i>
+          </a>
         </div>
       </div>
       <hr id="hr-portfolio">
@@ -86,32 +126,6 @@
         <div class="col-md-4 col-sm-12 col-xs-12">
           <a href="https://i.imgsafe.org/a249dde56b.png" target="_blank">
             <img src="https://i.imgsafe.org/a249dde56b.png" class="port-img img-responsive img-thumbnail center-block" alt="Portfolio-1">
-          </a>
-        </div>
-      </div>
-      <hr id="hr-contact">
-      <div id="contact" class="row">
-        <div class="col-md-12">
-          <h1 id="contact-title" class="section-title text-primary text-center">
-          Contact
-          </h1>
-          <h2 class="text-center">Visit or send me a message through these networks:</h2>
-        </div>
-        <div class="separator col-md-12 col-sm-12 col-xs-12">
-          </br>
-        </div>
-        <div class="col-md-12 text-center">
-          <a class="contact-icon" href="https://cr.linkedin.com/in/vguzmanc" target="_blank">
-            <i class="fa fa-linkedin-square"></i>
-          </a>
-          <a class="contact-icon" href="https://github.com/VictorGuzman" target="_blank">
-            <i class="fa fa-github"></i>
-          </a>
-          <a class="contact-icon" href="https://twitter.com/vicguzmn" target="_blank">
-            <i class="fa fa-twitter"></i>
-          </a>
-          <a class="contact-icon" href="https://www.facebook.com/victor.guzmanchinchilla" target="_blank">
-            <i class="fa fa-facebook-official"></i>
           </a>
         </div>
       </div>
