Fixed some typos

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <hr>
           <img id="rby-logo" src="https://i.imgsafe.org/01270c129c.png" class="img-responsive center-block" alt="Ruby Certified Programmer">
           <br>
-          <p>I am a full stack engineer, with practical experience on developing Web applications with Ruby on Rails and JavaScript; passionate about solutions architechture and data visualization.</p>
+          <p>I am a full stack engineer, with practical experience on developing Web applications with Ruby on Rails and JavaScript; passionate about solutions architecture and data visualisation.</p>
         </div>
       </div>
       <hr id="hr-contact">
