Add fix on images

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             Computer Engineer
           </h3>
           <hr>
-          <img id="rby-logo" src="https://i.imgsafe.org/01270c129c.png" class="img-responsive center-block" alt="Ruby Certified Programmer">
+          <img id="rby-logo" src="http://gdurl.com/v1PF" class="img-responsive center-block" alt="Ruby Certified Programmer">
           <br>
           <p>I am a full stack engineer, with practical experience on developing Web applications with Ruby on Rails and JavaScript; passionate about solutions architecture and data visualisation.</p>
         </div>
@@ -108,24 +108,24 @@
           </br>
         </div>
         <div class="col-md-4 col-sm-12 col-xs-12">
-          <a href="https://i.imgsafe.org/a2482410b8.png" target="_blank">
-            <img src="https://i.imgsafe.org/a2482410b8.png" class="port-img img-responsive img-thumbnail center-block" alt="Portfolio-3">
+          <a href="http://gdurl.com/Z6h1" target="_blank">
+            <img src="http://gdurl.com/Z6h1" class="port-img img-responsive img-thumbnail center-block" alt="Portfolio-3">
           </a>
         </div>
         <div class="separator col-sm-12 col-xs-12 visible-sm visible-xs">
           </br>
         </div>
         <div class="col-md-4 col-sm-12 col-xs-12">
-          <a href="https://i.imgsafe.org/a24753bdbf.png" target="_blank">
-            <img src="https://i.imgsafe.org/a24753bdbf.png" class="port-img img-responsive img-thumbnail center-block" alt="Portfolio-2">
+          <a href="http://gdurl.com/P2W4" target="_blank">
+            <img src="http://gdurl.com/P2W4" class="port-img img-responsive img-thumbnail center-block" alt="Portfolio-2">
           </a>
         </div>
         <div class="separator col-sm-12 col-xs-12 visible-sm visible-xs">
           </br>
         </div>
         <div class="col-md-4 col-sm-12 col-xs-12">
-          <a href="https://i.imgsafe.org/a249dde56b.png" target="_blank">
-            <img src="https://i.imgsafe.org/a249dde56b.png" class="port-img img-responsive img-thumbnail center-block" alt="Portfolio-1">
+          <a href="http://gdurl.com/vEZ8" target="_blank">
+            <img src="http://gdurl.com/vEZ8" class="port-img img-responsive img-thumbnail center-block" alt="Portfolio-1">
           </a>
         </div>
       </div>
